--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:  
+    - uses: actions/checkout@v3
+    
     - name: make unit-tests
       run: make unit-test
 
@@ -17,10 +19,7 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with: 
         name: test_artifact
-
-  runTest:
-    runs-on: ubuntu-latest
-    steps:  
+        
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.1
       with:
