--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: make unit-tests
-      run: make unit-test
+      run: make linux-unit-test
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
